# variform

./: .pre-commit-config.yaml  README.md  build-docs.sh  deploy.sh  format.sh  lint.sh  mkdocs.yml  pyproject.toml  requirements.txt  test.sh
.github/workflows/: tests.yml
tests/: common.py  test_cli.py
variform/: __init__.py  cli.py  version.py
