[project]
name = "variform"
requires-python = ">=3.7"
authors = [ {name="Alex Rubinsteyn", email="alex.rubinsteyn@unc.edu" } ]
description = "Variant isoform identification from long-read RNA sequencing"
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    'Environment :: Console',
    'Operating System :: OS Independent',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
]
readme = "README.md"
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
version = {attr = "variform.version.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = ["variform"]

[project.urls]
"Homepage" = "https://github.com/pirl-unc/variform"
"Bug Tracker" = "https://github.com/pirl-unc/variform"

[project.scripts]
variform = "variform.cli:main"
